# drf-auth

./: Dockerfile  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
animals/: models.py  permissions.py  serializers.py  urls.py  views.py
animals/migrations/: 0001_initial.py
drf_auth/: asgi.py  settings.py  urls.py  wsgi.py
